[metadata]
name = neumiss
version = 0.0.1
author = Marine Le Morvan, Alexandre Perez-Lebel
author_email = alexandre.perez@inria.fr
description = Implement the NeuMiss network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marineLM/NeuMiss_sota
project_urls =
    Bug Tracker = https://github.com/marineLM/NeuMiss_sota/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = neumiss
packages = find:
python_requires = >=3.6

[options.packages.find]
where = neumiss
